minor bug fixes, refactoring, and whitespace changes

--- a/public/draw.css
+++ b/public/draw.css
@@ -144,9 +144,6 @@ a:active {
     margin-bottom: 20px;
 }
 
-.color-panels-container {
-}
-
 .current-palette-title {
   font-weight: bold;
 }
@@ -199,7 +196,7 @@ a:active {
 }
 
 .canvas-controls .clear-restore-button, .canvas-controls .instructions-link {
-    margin-top: 0px;
+    margin-top: 0;
     margin-left: 30px;
 }
 
@@ -297,7 +294,7 @@ html.ie p {
     padding-bottom: 15px;
 }
 
-html.ie div.picture {
+html.ie .picture {
     /* Centers picture in IE5.5 */
     text-align: center;
     margin: 10px auto 25px;
